--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "5.7",
+    "mongoose": "^7.4.3",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.0",
+    "cors": "^2.8.5",
     "typescript": "^5.1.6"
   }
 }
