--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.0",
     "cors": "^2.8.5",
+    "react-toastify": "^9.1.3",
     "typescript": "^5.1.6"
   }
 }
